Fri Dec 12 20:23:17 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

          Fix problems from ACE_Message_Blocks created with a 
          null locking strategy that are then accessed by multiple
          threads simultaneously.  The chief one causing problems
          was the Data Sample Header message block created by
          the DataWriterImpl.

        * dds/DCPS/DataBlockLockPool.h:

          Make this class thread-safe by using an atomic op for
          the counter.  Make it all inline as well.

        * dds/DCPS/DataDurabilityCache.cpp:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:
        * dds/idl/ts_generator.cpp:

          Move the DataBlockLockPool of the writer object into
          the DataWriterImpl base class.  Use a lock whenever
          creating message blocks that could be sent to multiple
          data links.

        * dds/DCPS/DataBlockLockPool.cpp:

          Removed this file.

Wed Dec 10 17:16:40 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.cpp:

          Updated operator<<(MessageId) to account for the new enumerator.

Tue Dec  9 17:31:44 UTC 2014  Justin Wilson  <wilsonj@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Fixed bug caused by lag between association and propagation to BIT.

Thu Dec  4 20:30:40 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepoServ.h:
        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Made InfoRepo shutdown compatible with TAO ImR.
          The ImR can be commanded to shut down the ORB which will
          not run any of the InfoRepo's usual pre-ORB::shutdown() code.

Thu Dec  4 16:37:51 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Fixed locking order in transport_assoc_done to respect the